# google-auth-plugins-library-python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/upload-coverage/: action.yml
.github/workflows/: ci.yml  lint.yml  release.yml
google_auth_plugins/: __init__.py  dwd_credentials.py
tests/: test_dwd_credentials.py
