[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "google-auth-plugins"
dynamic = ["version"]
description = "A set of custom plugins for Google Authentication Library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Loïc Sikidi", email = "me@lsikidi.org" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
]
dependencies = [
  "google-auth >= 2.0.0",
  "requests",
]
requires-python = ">=3.7"
[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "prepend",
  "coverage[toml]"
]
lint = [
  "bandit",
  "black",
  "isort",
  "interrogate",
  "mypy",
]
dev = [
  "build",
  "bump >= 1.3.2",
  "google-auth-plugins[test,lint]",
]

[tool.isort]
multi_line_output = 3
known_first_party = "google-auth-plugins"
include_trailing_comma = true
profile = "black"

[tool.interrogate]
# don't enforce documentation coverage for packaging, testing, the virtual
# environment
exclude = ["env", "test"]
ignore-private = true
# FIXME currently overridden. see https://github.com/econchick/interrogate/issues/12
ignore-regex = ["^(refresh|with_quota_project|with_scopes)"]
fail-under = 100

[tool.coverage.run]
# branch coverage in addition to statement coverage.
branch = true
# FIXME currently overridden. see: https://pytest-cov.readthedocs.io/en/latest/config.html
# include machine name, process id, and a random number in `.coverage-*` so each file is distinct.
parallel = true
# store relative path info for aggregation across runs with potentially differing filesystem layouts.
# see: https://coverage.readthedocs.io/en/7.1.0/config.html#config-run-relative-files
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "@abc.abstractmethod",
    "@typing.overload",
    "if typing.TYPE_CHECKING",
]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["./tests"]